create container as parent of content

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>Image Comparison</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="cocoen.min.css" />
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
 
+        .container {
+            padding: 100px;
+            background: #212121;
+            height: 100vh;
+        }
+    </style>
 </head>
 
 <body>
 
+    <div class="container">
+
+    </div>
 
     <script src="cocoen.min.js"></script>
 </body>
