create script for compare to image

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     </div>
 
     <script src="cocoen.min.js"></script>
+    <script>
+        new Cocoen(document.querySelector('.cocoen'));
+    </script>
 </body>
 
 </html>
