--- a/index.html
+++ b/index.html
@@ -18,12 +18,27 @@
             background: #212121;
             height: 100vh;
         }
+
+        h1 {
+            color: aliceblue;
+            font-family: cursive;
+            text-align: center;
+        }
+
+        p {
+            color: antiquewhite;
+            text-align: center;
+            font-family: cursive;
+            padding-bottom: 50px;
+        }
     </style>
 </head>
 
 <body>
 
     <div class="container">
+        <h1>I'M AN OWL KING.</h1>
+        <p>When i am at angry i become scary. but when i am at happy i am very cuty.</p>
         <div class="cocoen">
             <img src="https://images.wallpaperscraft.com/image/owl_minimalism_art_103295_3840x2400.jpg" alt="">
             <img src="https://images.wallpaperscraft.com/image/owl_bird_art_branch_97204_3840x2400.jpg" alt="">
